--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -36,3 +36,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <!-- Configure your routes here -->
 <link rel="import" href="routing.html">
+
+<!-- Google elements -->
+<link rel="import" href="../bower_components/google-calendar/google-calendar.html">
+<link rel="import" href="../bower_components/paper-fab/paper-fab.html">
