--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -23,10 +23,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   :root {
     --dark-primary-color: #303F9F;
-    --default-primary-color: #3F51B5;
+    --default-primary-color:#3F51B5; /* #3F51B5 ->#42a5f5 */
     --light-primary-color: #C5CAE9;
     --text-primary-color: #ffffff; /*text/icons*/
-    --accent-color: #FF4081;
+    --accent-color: #E91E63;
     --primary-background-color: #c5cae9;
     --primary-text-color: #212121;
     --secondary-text-color: #727272;
@@ -36,12 +36,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     /* Components */
 
     /* paper-drawer-panel */
-    --drawer-menu-color: #ffffff;
+    --drawer-menu-color: #eeeeee;
     --drawer-border-color: 1px solid #ccc;
     --drawer-toolbar-border-color: 1px solid rgba(0, 0, 0, 0.22);
 
     /* paper-menu */
-    --paper-menu-background-color: #fff;
+    --paper-menu-background-color: #eeeeee;
     --menu-link-color: #111111;
   }
 
@@ -51,7 +51,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     color: var(--secondary-text-color);
     background-color: var(--drawer-menu-color);
     border-bottom: var(--drawer-toolbar-border-color);
-    height: 64px;
+    height: 64px;  
   }
 
   paper-material {
@@ -63,9 +63,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     background: white;
   }
 
+  paper-menu {
+    height: 100%;
+  }
+
   paper-menu iron-icon {
     margin-right: 33px;
-    opacity: 0.54;
+    opacity: 0.60;
   }
 
   .paper-menu > .iron-selected {
@@ -96,6 +100,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   #mainToolbar .middle {
     margin-left: 48px;
+
   }
 
   #mainToolbar.has-shadow .middle {
@@ -131,6 +136,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     #drawer .paper-toolbar {
       margin-left: 16px;
+
     }
 
     #overlay {
@@ -158,7 +164,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
 
     iron-pages {
-      padding: 48px 62px;
+      padding: 5px 20px;
     }
 
   }
