Webdesign Completed, PAPER FAB, IRON COLLAPSE added!

--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -98,6 +98,28 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     padding: 0 16px;
   }
 
+  .heading {
+    padding: 10px 15px;
+    margin-top: 20px;
+    background-color: #f3f3f3;
+    border: 1px solid #dedede;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    width: 100%;
+    text-align: left;
+  }
+
+  .dcontent {
+      padding: 15px;
+      border: 1px solid #dedede;
+      border-top: none;
+      border-bottom-left-radius: 5px;
+      border-bottom-right-radius: 5px;
+   }
+
   #mainToolbar .middle {
     margin-left: 48px;
 
@@ -113,7 +135,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   .content {
     height: 900px;
   }
-
+    
   /* Breakpoints */
 
   /* Small */
